import VSquare from '~/components/molecules/VSquare.vue'

export default {
  title: `molecules|VSquare`
}

export const def = () => ({
  components: { VSquare },
  template: '<v-square></v-square>'
})
