// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules|VSquare Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-content"
      style="padding: 64px 0px 0px 0px;"
    >
      <div
        class="v-content__wrap"
      >
        <div
          class="square glow"
        />
      </div>
    </main>
  </div>
</div>
`;

exports[`Storyshots Molecules|VSquare Placeable 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-content"
      style="padding: 64px 0px 0px 0px;"
    >
      <div
        class="v-content__wrap"
      >
        <div
          class="square own-player1"
        />
      </div>
    </main>
  </div>
</div>
`;
